--- a/.github/workflows/java.yaml
+++ b/.github/workflows/java.yaml
@@ -39,7 +39,7 @@ jobs:
         name: Release
         runs-on: ubuntu-latest
         needs: build
-        if: github.ref == 'refs/heads/main'
+        if: github.ref == 'refs/heads/master'
         steps:
             - name: Checkout
               uses: actions/checkout@v2
