--- a/judge-d-server/src/test/resources/application-test.properties
+++ b/judge-d-server/src/test/resources/application-test.properties
@@ -1,3 +1,5 @@
+server.port=0
+
 pactbroker.url=https://localhost:${wiremock.server.https-port}/
 
 spring.datasource.url=jdbc:h2:mem:example-app;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
