--- a/judge-d-agent/pom.xml
+++ b/judge-d-agent/pom.xml
@@ -14,8 +14,11 @@
     <name>Judge-D-Agent</name>
 
     <properties>
-        <swaggerVersion>2.7.0</swaggerVersion>
-        <pactGenVersion>1.3.7</pactGenVersion>
+        <pactGenVersion>1.4.0</pactGenVersion>
+        <httpclientVersion>4.5.13</httpclientVersion>
+        <consulApiVersion>1.4.5</consulApiVersion>
+        <cglibVersion>3.3.0</cglibVersion>
+        <kubernetesApiVersion>3.1.10</kubernetesApiVersion>
     </properties>
 
     <dependencies>
@@ -34,32 +37,32 @@
         <dependency>
             <groupId>io.github.openfeign</groupId>
             <artifactId>feign-core</artifactId>
-            <version>9.6.0</version>
+            <version>${feignVersion}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-openfeign-core</artifactId>
-            <version>2.0.1.RELEASE</version>
+            <version>${springCloudVersion}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-netflix-hystrix</artifactId>
-            <version>2.1.0.RELEASE</version>
+            <version>${hystrixVersion}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-context</artifactId>
-            <version>2.1.0.RELEASE</version>
+            <version>${springCloudVersion}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-commons</artifactId>
-            <version>2.1.0.RELEASE</version>
+            <version>${springCloudVersion}</version>
         </dependency>
         <dependency>
             <groupId>io.fabric8</groupId>
             <artifactId>kubernetes-client</artifactId>
-            <version>3.1.10</version>
+            <version>${kubernetesApiVersion}</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -68,12 +71,12 @@
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
-            <version>4.5.7</version>
+            <version>${httpclientVersion}</version>
         </dependency>
         <dependency>
             <groupId>com.ecwid.consul</groupId>
             <artifactId>consul-api</artifactId>
-            <version>1.4.5</version>
+            <version>${consulApiVersion}</version>
         </dependency>
 
         <!--TEST-->
@@ -102,13 +105,13 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-contract-wiremock</artifactId>
-            <version>1.2.4.RELEASE</version>
+            <version>${springCloudVersion}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>cglib</groupId>
             <artifactId>cglib-nodep</artifactId>
-            <version>3.2.10</version>
+            <version>${cglibVersion}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -120,7 +123,7 @@
         <dependency>
             <groupId>io.fabric8</groupId>
             <artifactId>kubernetes-server-mock</artifactId>
-            <version>3.1.10</version>
+            <version>${kubernetesApiVersion}</version>
             <exclusions>
                 <exclusion>
                     <groupId>com.sun</groupId>
@@ -132,7 +135,7 @@
         <dependency>
             <groupId>org.awaitility</groupId>
             <artifactId>awaitility</artifactId>
-            <version>3.0.0</version>
+            <version>${awaitilityVersion}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
