--- a/pom.xml
+++ b/pom.xml
@@ -24,12 +24,18 @@
     </scm>
 
     <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <groovyAllVersion>2.5.14</groovyAllVersion>
-        <lombokVersion>1.18.12</lombokVersion>
-        <spockVersion>1.3-groovy-2.5</spockVersion>
         <version.number>1.${git.total.commit.count}.0_${git.commit.id.abbrev}</version.number>
-        <springBootVersion>2.1.1.RELEASE</springBootVersion>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <groovyAllVersion>3.0.8</groovyAllVersion>
+        <lombokVersion>1.18.20</lombokVersion>
+        <spockVersion>2.0-groovy-3.0</spockVersion>
+        <springBootVersion>2.5.3</springBootVersion>
+        <springCloudVersion>3.0.3</springCloudVersion>
+        <feignVersion>11.6</feignVersion>
+        <hystrixVersion>2.2.9.RELEASE</hystrixVersion>
+        <archunitVersion>0.20.1</archunitVersion>
+        <vauntVersion>1.0.28</vauntVersion>
+        <awaitilityVersion>4.1.0</awaitilityVersion>
     </properties>
 
     <dependencyManagement>
@@ -83,7 +89,7 @@
                 <plugin>
                     <groupId>org.jacoco</groupId>
                     <artifactId>jacoco-maven-plugin</artifactId>
-                    <version>0.8.5</version>
+                    <version>0.8.7</version>
                     <executions>
                         <execution>
                             <id>prepare-agent</id>
@@ -105,7 +111,7 @@
                 <plugin>
                     <groupId>org.codehaus.gmavenplus</groupId>
                     <artifactId>gmavenplus-plugin</artifactId>
-                    <version>1.6</version>
+                    <version>1.12.1</version>
                     <configuration>
                         <testSources>
                             <testSource>
@@ -128,7 +134,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.21.0</version>
+                    <version>2.22.2</version>
                     <configuration>
                         <includes>
                             <include>**/*UT.java</include>
@@ -176,7 +182,7 @@
                 <plugin>
                     <groupId>pl.project13.maven</groupId>
                     <artifactId>git-commit-id-plugin</artifactId>
-                    <version>4.0.0</version>
+                    <version>4.9.10</version>
                     <executions>
                         <execution>
                             <id>get-git-metadata</id>
