--- a/.github/workflows/java.yaml
+++ b/.github/workflows/java.yaml
@@ -12,7 +12,7 @@ jobs:
               with:
                   java-version: '11'
                   distribution: 'adopt'
-            - name: Cache Maven packages
+            - name: Cache Gradle packages
               uses: actions/cache@v2
               with:
                   path: ~/.m2
@@ -25,10 +25,12 @@ jobs:
                   password: ${{ secrets.DOCKER_PASSWORD }}
             - name: Pull postgress docker image for functional tests
               run: docker pull postgres:9.6.12
-            - name: Build with maven & generate reports
+            - name: Grant execute permission for gradlew
+              run: chmod +x gradlew
+            - name: Build with gradle & generate reports
               env:
-                  COVERALLS_REPO_KEY: ${{ secrets.COVERALLS_REPO_KEY }}
-              run: mvn clean verify jacoco:report coveralls:report
+                  COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_KEY }}
+              run: ./gradlew clean check -i codeCoverageReport coveralls
             - name: Cache build files
               uses: actions/cache@v2
               id: cache-build
@@ -55,9 +57,9 @@ jobs:
                   username: ${{ secrets.DOCKER_USERNAME }}
                   password: ${{ secrets.DOCKER_PASSWORD }}
             - name: Build judge-d-server docker image
-              run: mvn validate docker:build@build-docker -P docker-app -f ./judge-d-server/pom.xml
+              run: ./gradlew judge-d-server:dockerTag
             - name: Push judge-d docker image to DockerHub
-              run: docker push hltech/judge-d
+              run: docker push --all-tags hltech/judge-d
             - name: Push to heroku registry
               run: |
                   docker login -u _ -p $HEROKU_API_KEY registry.heroku.com
@@ -73,6 +75,6 @@ jobs:
                   HEROKU_API_KEY: ${{secrets.HEROKU_API_KEY}}
                   HEROKU_APP_NAME : "judge-d"
             - name: Build docker image for agent
-              run: mvn validate docker:build@build-docker -P docker-app -f ./judge-d-agent/pom.xml
+              run: ./gradlew judge-d-agent:dockerTag
             - name: Publish judge-d-agent docker image to DockerHub
-              run: docker push hltech/judge-d-agent
+              run: docker push --all-tags hltech/judge-d-agent
