--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ atlassian-ide-plugin.xml
 # Gradle
 .gradle
 **/build/
+**/out/
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
 !gradle-wrapper.jar
 
