--- a/judge-d-agent/src/main/docker/Dockerfile
+++ b/judge-d-agent/src/main/docker/Dockerfile
@@ -1,8 +1,8 @@
 FROM adoptopenjdk/openjdk11:alpine-slim
 
 WORKDIR /root
-ADD ./judge-d-agent-0.1-SNAPSHOT.jar /root/judge-d-agent.jar
-ADD ./entrypoint.sh /root/entrypoint.sh
+ADD judge-d-agent* /root/judge-d-agent.jar
+ADD entrypoint.sh /root/entrypoint.sh
 RUN chmod +x /root/entrypoint.sh
 
 CMD ["/root/entrypoint.sh"]
